HTML, JS, CSS, templates

--- a/index.html
+++ b/index.html
@@ -1,64 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>David Castagneto' s Personal Portfolio</title>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+        <!--=============== FAVICON ===============-->
+        <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
-    <!--=============== BOXICONS ===============-->
-    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+        <!--=============== BOXICONS ===============-->
+        <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
-    <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="">
+        <!--=============== SWIPER CSS ===============-->
+        <link rel="stylesheet" href="">
 
-    <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="css/style.css">
+        <!--=============== CSS ===============-->
+        <link rel="stylesheet" href="assets/css/styles.css">
 
-    <!--=============== FONTAWESOME ===============-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
-    
-
-</head>
+        <title> Responsive portfolio website Ansel </title>
+    </head>
     <body>
         <!--=============== HEADER ===============-->
         <header class="header" id="header">
-            <nav class="nav container">
-                <a href="#" class="nav__logo">David Castagneto</a>
-
-                <div class="nav__menu">
-                    <ul class="nav__list">
-                        <li class="nav__item">
-                            <a href="#home" class="nav__link">
-                                <i class='bx bxs-home'></i>
-                            </a>
-                        </li>
-                        <li class="nav__item">
-                            <a href="#about" class="nav__link">
-                                <i class='bx bxs-user-circle'></i>
-                            </a>
-                        </li>
-                        <li class="nav__item">
-                            <a href="#skills" class="nav__link">
-                                <i class='bx bxs-book-bookmark'></i>
-                            </a>
-                        </li>
-                        <li class="nav__item">
-                            <a href="#work" class="nav__link">
-                                <i class='bx bxs-briefcase-alt-2'></i>
-                            </a>
-                        </li>
-                        <li class="nav__item">
-                            <a href="#contact" class="nav__link">
-                                <i class='bx bxs-message-square-detail'>hola</i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            
         </header>
 
         <!--=============== MAIN ===============-->
@@ -114,6 +77,6 @@
         <script src=""></script>
 
         <!--=============== MAIN JS ===============-->
-        <script src="/js/main.js"></script>
+        <script src=""></script>
     </body>
 </html>
