Header & Nav Menu

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                         </li>
                     </ul>
                 </div>
+
+                <!-- Theme change button -->
+
+                <i class='bx bx-moon change-theme' id="theme-button"></i>
             </nav>
         </header>
 
