--- a/index.html
+++ b/index.html
@@ -85,16 +85,21 @@
                         </div>
 
                         <div class="home__social">
-                            <a href="" class="home__social-link">
+                            <a href="https://www.linkedin.com/in/david-castagneto-aguirre-b30309b2/" class="home__social-link">
                                 <i class='bx bxl-linkedin-square' ></i>
                             </a>
-                            <a href="" class="home__social-link">
+                            <a href="https://github.com/davidcastagnetoa" class="home__social-link">
                                 <i class='bx bxl-github' ></i>
                             </a>
-                            <a href="" class="home__social-link">
-
+                            <a href="https://www.instagram.com/davidcastagnetoa/" class="home__social-link">
+                                <i class='bx bxl-dribbble'></i>
                             </a>
                         </div>
+
+                        <a href="#about" class="home__scroll">
+                            <i class='bx bx-mouse home__scroll-icon' ></i>
+                            <span class="home__scroll-name">Scroll Down</span>
+                        </a>
                     </div>
                 </div>
             </section>
