--- a/index.html
+++ b/index.html
@@ -73,34 +73,35 @@
                         <span class="home__greeting">Greeting, I'm</span>
                         <h1 class="home__name">David Castagneto Aguirre</h1>
                         <h3 class="home__education">Full Stack Web Development</h3>
+
                         <div class="home__buttons">
                             <a download="" href="assets/pdf/Ansel-Cv.pdf" class="button button--ghost">
                                 Download CV
                             </a>
-                            <a href="#about" class="button">About Me</a>
+                            <a href="#about" class="button">About me</a>
                         </div>
+                    </div>
 
-                        <div class="home__handle">
-                            <img src="assets/img/perfil.png" alt="home__img">
-                        </div>
+                    <div class="home__handle">
+                        <img src="assets/img/perfil3.jpg" alt="" class="home__img">
+                    </div>
 
-                        <div class="home__social">
-                            <a href="https://www.linkedin.com/in/david-castagneto-aguirre-b30309b2/" class="home__social-link">
-                                <i class='bx bxl-linkedin-square' ></i>
-                            </a>
-                            <a href="https://github.com/davidcastagnetoa" class="home__social-link">
-                                <i class='bx bxl-github' ></i>
-                            </a>
-                            <a href="https://www.instagram.com/davidcastagnetoa/" class="home__social-link">
-                                <i class='bx bxl-dribbble'></i>
-                            </a>
-                        </div>
-
-                        <a href="#about" class="home__scroll">
-                            <i class='bx bx-mouse home__scroll-icon' ></i>
-                            <span class="home__scroll-name">Scroll Down</span>
+                    <div class="home__social">
+                        <a href="https://www.linkedin.com/in/david-castagneto-aguirre-b30309b2/" class="home__social-link">
+                            <i class='bx bxl-linkedin-square' ></i>
+                        </a>
+                        <a href="https://github.com/davidcastagnetoa" class="home__social-link">
+                            <i class='bx bxl-github' ></i>
+                        </a>
+                        <a href="https://www.instagram.com/davidcastagnetoa/" class="home__social-link">
+                            <i class='bx bxl-dribbble'></i>
                         </a>
                     </div>
+
+                    <a href="#about" class="home__scroll">
+                        <i class='bx bx-mouse home__scroll-icon' ></i>
+                        <span class="home__scroll-name">Scroll Down</span>
+                    </a>
                 </div>
             </section>
             
