--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
                         <a href="https://github.com/davidcastagnetoa" class="home__social-link">
                             <i class='bx bxl-github' ></i>
                         </a>
-                        <a href="https://www.instagram.com/davidcastagnetoa/" class="home__social-link">
+                        <a href="https://dribbble.com/david_castagneto/" class="home__social-link">
                             <i class='bx bxl-dribbble'></i>
+                        </a>
+                        <a href="https://www.instagram.com/davidcastagnetoa/" class="home__social-link">
+                            <i class='bx bxl-instagram'></i>
                         </a>
                     </div>
 
@@ -107,7 +110,39 @@
             
             <!--=============== ABOUT ===============-->
             <section class="about section" id="about">
-                
+                <span class="section__subtitle">My intro</span>
+                <h2 class="section__title">About Me</h2>
+
+                <div class="about__container container grid">
+                    <img src="assets/img/perfil4.jpg" alt="" class="about__img">
+
+                    <div class="about__data">
+                        <div class="about__info">
+                            <div class="about__box">
+                                <i class='bx bx-award about about__icon' ></i>
+                                <h3 class="about__title">Experience</h3>
+                                <span class="about__subtitle">4 Years Working</span>
+                            </div>
+
+                            <div class="about__box">
+                                <i class='bx bx-briefcase-alt-2 about__icon' ></i>
+                                <h3 class="about__title">Completed</h3>
+                                <span class="about__subtitle">2 + Projects</span>
+                            </div>
+
+                            <div class="about__box">
+                                <i class='bx bx-support about__icon' ></i>
+                                <h3 class="about__title">Support</h3>
+                                <span class="about__subtitle">Online 24/7</span>
+                            </div>
+                        </div>
+                        <p class="about__desciption">
+                            Full stack web developer begginner, I worked in web pages with UI/UX user interface using tools like Adobe Photoshop, 3D design in Cinema 4D, modelling and rendering, Currently I'm working in Security Company like Technical Assistance and studying Coding in Bottega University.
+                        </p>
+
+                        <a href="#contact" class="button">Contact Me </a>
+                    </div>
+                </div>
             </section>
 
             <!--=============== SKILLS ===============-->
