--- a/index.html
+++ b/index.html
@@ -73,40 +73,76 @@
                         <span class="home__greeting">Greeting, I'm</span>
                         <h1 class="home__name">David Castagneto Aguirre</h1>
                         <h3 class="home__education">Full Stack Web Development</h3>
+
                         <div class="home__buttons">
                             <a download="" href="assets/pdf/Ansel-Cv.pdf" class="button button--ghost">
                                 Download CV
                             </a>
-                            <a href="#about" class="button">About Me</a>
+                            <a href="#about" class="button">About me</a>
                         </div>
+                    </div>
 
-                        <div class="home__handle">
-                            <img src="assets/img/perfil.png" alt="home__img">
-                        </div>
+                    <div class="home__handle">
+                        <img src="assets/img/perfil3.jpg" alt="" class="home__img">
+                    </div>
 
-                        <div class="home__social">
-                            <a href="https://www.linkedin.com/in/david-castagneto-aguirre-b30309b2/" class="home__social-link">
-                                <i class='bx bxl-linkedin-square' ></i>
-                            </a>
-                            <a href="https://github.com/davidcastagnetoa" class="home__social-link">
-                                <i class='bx bxl-github' ></i>
-                            </a>
-                            <a href="https://www.instagram.com/davidcastagnetoa/" class="home__social-link">
-                                <i class='bx bxl-dribbble'></i>
-                            </a>
-                        </div>
-
-                        <a href="#about" class="home__scroll">
-                            <i class='bx bx-mouse home__scroll-icon' ></i>
-                            <span class="home__scroll-name">Scroll Down</span>
+                    <div class="home__social">
+                        <a href="https://www.linkedin.com/in/david-castagneto-aguirre/" class="home__social-link">
+                            <i class='bx bxl-linkedin-square' ></i>
+                        </a>
+                        <a href="https://github.com/davidcastagnetoa" class="home__social-link">
+                            <i class='bx bxl-github' ></i>
+                        </a>
+                        <a href="https://dribbble.com/david_castagneto/" class="home__social-link">
+                            <i class='bx bxl-dribbble'></i>
+                        </a>
+                        <a href="https://www.instagram.com/davidcastagnetoa/" class="home__social-link">
+                            <i class='bx bxl-instagram'></i>
                         </a>
                     </div>
+
+                    <a href="#about" class="home__scroll">
+                        <i class='bx bx-mouse home__scroll-icon' ></i>
+                        <span class="home__scroll-name">Scroll Down</span>
+                    </a>
                 </div>
             </section>
             
             <!--=============== ABOUT ===============-->
             <section class="about section" id="about">
-                
+                <span class="section__subtitle">My intro</span>
+                <h2 class="section__title">About Me</h2>
+
+                <div class="about__container container grid">
+                    <img src="assets/img/perfil5.jpg" alt="" class="about__img">
+
+                    <div class="about__data">
+                        <div class="about__info">
+                            <div class="about__box">
+                                <i class='bx bx-award about about__icon' ></i>
+                                <h3 class="about__title">Experience</h3>
+                                <span class="about__subtitle">4 Years Working</span>
+                            </div>
+
+                            <div class="about__box">
+                                <i class='bx bx-briefcase-alt-2 about__icon' ></i>
+                                <h3 class="about__title">Completed</h3>
+                                <span class="about__subtitle">2 + Projects</span>
+                            </div>
+
+                            <div class="about__box">
+                                <i class='bx bx-support about__icon' ></i>
+                                <h3 class="about__title">Support</h3>
+                                <span class="about__subtitle">Online 24/7</span>
+                            </div>
+                        </div>
+                        <p class="about__desciption">
+                            Full stack web developer begginner, I worked in web pages with UI/UX user interface using tools like Adobe Photoshop, 3D design in Cinema 4D, modelling and rendering. Currently I'm working in Security Company like Technical Assistance and studying Coding in Bottega University.
+                        </p>
+
+                        <a href="#contact" class="button">Contact Me </a>
+                    </div>
+                </div>
             </section>
 
             <!--=============== SKILLS ===============-->
